.provarCaches/00D6C0000000xA6UAI/objects/GL_Unit_Code__c.object
<CustomObject>
    <fields>
        <fullName>CS_Region_Name__c</fullName>
        <label>CS Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Region__c</fullName>
        <label>CS Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Loc__c</fullName>
        <label>GL Loc</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_PHSS_Loc__c</fullName>
        <label>GL PHSS Loc</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSTER_Division__c</fullName>
        <label>HSTER Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSTER_Name__c</fullName>
        <label>HSTER Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSTER__c</fullName>
        <label>HSTER</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRREG_Name__c</fullName>
        <label>PRREG Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRREG_Type__c</fullName>
        <label>PRREG Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRREG__c</fullName>
        <label>PRREG</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Group_Name__c</fullName>
        <label>State Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Group__c</fullName>
        <label>State Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_LOC__c</fullName>
        <label>TS LOC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Address__c</fullName>
        <label>Unit Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_City_Name__c</fullName>
        <label>Unit City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <externalId>true</externalId>
        <label>Unit Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_State_Name__c</fullName>
        <label>Unit State Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_State__c</fullName>
        <label>Unit State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Zip_Code__c</fullName>
        <label>Unit Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>GL Unit Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unit_Code__c</columns>
        <columns>TS_LOC__c</columns>
        <columns>CS_Region__c</columns>
        <columns>CS_Region_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Division_Name__c</columns>
        <columns>GL_PHSS_Loc__c</columns>
        <columns>HSTER__c</columns>
        <columns>HSTER_Division__c</columns>
        <columns>HSTER_Name__c</columns>
        <columns>PRREG__c</columns>
        <columns>PRREG_Name__c</columns>
        <columns>PRREG_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Unit Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Unit Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>